# image-translator

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  log.txt  pyproject.toml  requirements.txt  test.ppt  test.py
app/: gradio_app.py  pdf_app.py  ppt_app.py  test_stream.py
src/image_translator/: __main__.py  flux_check.py  interactive_pipeline.py  pipeline.py  streaming_pipeline.py  utils.py
src/image_translator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/image_translator/fluxtext_inputs/: entry_000_prompt.txt  entry_001_prompt.txt  entry_002_prompt.txt  entry_003_prompt.txt  flux_inputs_metadata.json
src/image_translator/inpainter/: Dockerfile  inpaint_worker.py  requirements.txt
src/image_translator/layout/: Dockerfile  layout_worker.py
src/image_translator/multimodal_translator/: Dockerfile  requirements.txt  translator_worker.py
src/image_translator/ocr/: Dockerfile  README.md  ocr_worker.py  paddle_ocr.py
src/image_translator/outputs/: merged_texts.txt
src/image_translator/segmenter/: Dockerfile  requirements.txt  segment_worker.py
src/image_translator/translator/: Dockerfile  requirements.txt  translator_worker.py
src/image_translator/vllm_segmenter/: Dockerfile  requirements.txt  segment_worker.py
